Fix screen sizing and text overflowing issue

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     margin: 0px;
+    font-family: 'Courier New', Courier, monospace;
     display: flex;
     flex-direction: column;
 }
@@ -134,7 +135,7 @@ p {
     min-width: 500px;
     background-color: white;
     padding: 50px;
-    border: 10px double rgb(92, 83, 76);
+    border: 15px groove rgb(92, 83, 76);
 }
 
 .information-title {
@@ -158,22 +159,30 @@ p {
 }
 
 .tree {
-    height: 400px;
+    height: 500px;
     width: 1300px;
-    min-height: 200px;
-    min-width: 1100px;
     filter: blur(3px) grayscale(100%);
     opacity: 0.3;
     mix-blend-mode: hard-light;
 }
 
 .importance-text-box {
-    max-height: 300px;
-    min-width: 900px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    max-height: 400px;
+    min-width: 900px;
+    max-width: 1200px;
+}
+
+.importance-text-topic {
+    text-decoration: underline;
+    margin-bottom: 20px;
+}
+
+.importance-text-response {
+    margin-bottom: 20px;
 }
 
 .importance-text-topic,
